--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 
 html{
     background-image: url("http://www.scalsys.com/backgrounds/crystal-backgrounds/crystal-backgrounds_202449.jpg");
-    /* http://www.scalsys.com/backgrounds/crystal-backgrounds/crystal-backgrounds_202449.jpg */
 }
 h1 {
     text-align: center;
@@ -10,21 +9,34 @@ h1 {
     font-size:50px;
 }
 
-#totalNumber{
+#rules{
+    position:absolute;
+    top:40px;
+    right:70px;
+    justify-content: right;
+    width:300px;
+    color :darkmagenta;
+    font-style: italic;
+    font-size: 130%;
+    font-weight:bolder;
+    padding:50px;
+    border: 2px solid #704697;border-radius: 12px;padding:2px;
+}
+#totalNumber, #userTotal{
     font-weight:bold;
     font-size:30px;
     color:blueviolet;
     margin-top:130px;
+    /*float:left;*/
+ }
 
-    margin-left: 40px;
-    
-}
+ #userTotal{
+     opacity: 0.0;
+ }
 
  userwinslosses{
     display:flexbox;
-    flex-direction: row;
-  
-} 
+ } 
 
 #wins, #losses {
     color:darkorchid;
@@ -43,21 +55,59 @@ h1 {
 fourCrystals{
     display:flexbox;
     position: absolute;
-    bottom : 100px;
+    bottom : 150px;
     
 }
 
 .crystals{
     
     margin-left:140px;
-    
+
 }
+
+img:hover {
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
 
 lavenderButton{
     border:1px solid darkcyan;
     position: absolute;
-    bottom : 100px;
+    /*bottom : 120px;*/
     margin-left:140px;
     width:20px;
 }
 
+#start{
+    position:absolute;
+    bottom:30px;
+    right:50%;
+
+    background-color:lightpink;
+    color:blueviolet;
+    border:none;
+    font-weight:bold;
+    font-size:20px;
+
+    padding:10px;
+    /*padding-top:10px;
+    padding-bottom:10px;
+    padding-left:10px;
+    padding-right:10px;*/
+
+    
+}
